package comparators;

import java.util.List;

public interface PriceComparison {

    Integer compare(List<Integer> data);

}
